more work toward full simulation capabilities

--- a/gstlal.ini
+++ b/gstlal.ini
@@ -1,6 +1,6 @@
 [general]
-pipeline = cwb
-search = allsky
+pipeline = gstlal
+search = lowmass
 
 [external triggers]
 prob of success = 1.0
@@ -37,32 +37,32 @@ start dt = 10.0
 flags dt = 60.0
 finish dt = 70.0
 
-#[bayestar]
-#prob of success = 1.0
-#start dt = 10.0
-#skymap dt = 60.0
-#finish dt = 65.0
-
-#[lalinf]
-#prob of success = 1.0
-#start dt = 10.0
-#skymap dt = 110.0
-#post samp dt = 120.0
-
-[lib]
+[bayestar]
 prob of success = 1.0
 start dt = 10.0
-bayes factor dt = 100.0
+skymap dt = 60.0
+finish dt = 65.0
+
+[lalinf]
+prob of success = 1.0
+start dt = 10.0
 skymap dt = 110.0
 post samp dt = 120.0
 
-[bayeswave]
-prob of success = 1.0
-start dt = 10.0
-post samp dt = 60.0
-estimate dt = 65.0
-bayes factor dt = 70.0
-skymap dt = 80.0
+#[lib]
+#prob of success = 1.0
+#start dt = 10.0
+#bayes factor dt = 100.0
+#skymap dt = 110.0
+#post samp dt = 120.0
+
+#[bayeswave]
+#prob of success = 1.0
+#start dt = 10.0
+#post samp dt = 60.0
+#estimate dt = 65.0
+#bayes factor dt = 70.0
+#skymap dt = 80.0
 
 [plot skymaps]
 prob of success = 1.0
