--- a/olib.ini
+++ b/olib.ini
@@ -1,5 +1,5 @@
 [general]
-pipeline = cwb
+pipeline = lib
 search = allsky
 
 [external triggers]
@@ -56,13 +56,13 @@ bayes factor dt = 100.0
 skymap dt = 110.0
 post samp dt = 120.0
 
-[bayeswave]
-prob of success = 1.0
-start dt = 10.0
-post samp dt = 60.0
-estimate dt = 65.0
-bayes factor dt = 70.0
-skymap dt = 80.0
+#[bayeswave]
+#prob of success = 1.0
+#start dt = 10.0
+#post samp dt = 60.0
+#estimate dt = 65.0
+#bayes factor dt = 70.0
+#skymap dt = 80.0
 
 [plot skymaps]
 prob of success = 1.0
