along with misc debugging, wrote ExternalTriggers and UnblindInjections within misc.py as well as PlotSkymaps and Skyviewer within pe.py. NOTE: PlotSkymaps and Skyviewer should be called during the other PE object's genSchedule calls and should build the associated sub-schedules that way. The object then merges the schedule it created and the schedule from the delegation and returns the result.

--- a/etc/cwb.ini
+++ b/etc/cwb.ini
@@ -1,11 +1,11 @@
 [general]
 group    = Test
-pipeline = LIB
+pipeline = CWB
 search   = AllSky
 
 [humans]
 request = True
-respond = False
+respond = True
 
 request delay  = 10
 request jitter = 2
@@ -13,7 +13,7 @@ request jitter = 2
 site respond delay  = 30
 site respond jitter = 5
 site respond prob   = 0.9
-site success prob   = 0.9
+site success prob   = 0.5
 
 adv respond delay  = 45
 adv respond jitter = 5
