implemented CoincInspiralTable in pipelines.py, all PE models within pe.py, and updated simUtils.py to load in parameters. Updated config files to contain those parameters

--- a/etc/gstlal.ini
+++ b/etc/gstlal.ini
@@ -1,7 +1,7 @@
 [general]
 group    = Test
-pipeline = LIB
-search   = AllSky
+pipeline = GSTLAL
+search   = LowMass
 
 [humans]
 request = True
@@ -30,7 +30,7 @@ skyviewer delay  = 10
 skyviewer jitter = 1
 skyviewer prob   = 1.0
 
-[lib]
+[bayestar]
 lvem = True
 
 start delay  = 10
@@ -45,6 +45,20 @@ skymap delay  = 60
 skymap jitter = 10
 skymap prob   = 1.0
 
+[lalinference]
+lvem = True
+
+start delay  = 10
+start jitter = 1
+start prob   = 1.0
+
+finish delay  = 60
+finish jitter = 5
+finish prob   = 1.0
+
+skymap delay  = 60
+skymap jitter = 10
+skymap prob   = 1.0
 
 [external triggers]
 delay  = 60
