--- a/etc/cwb.ini
+++ b/etc/cwb.ini
@@ -20,6 +20,57 @@ adv respond jitter = 5
 adv respond prob   = 0.9
 adv success prob   = 0.5
 
+[plot skymaps]
+plotSkymap delay  = 10
+plotSkymap jitter = 1
+plotSkymap prob   = 1.0
+
+[skyviewer]
+skyviewer delay  = 10
+skyviewer jitter = 1
+skyviewer prob   = 1.0
+
+[cwbPE]
+lvem = True
+
+finish delay  = 60
+finish jitter = 5
+finish prob   = 1.0
+
+skymap delay  = 60
+skymap jitter = 10
+skymap prob   = 1.0
+
+[bayeswave]
+lvem = True
+
+start delay  = 10
+start jitter = 1
+start prob   = 1.0
+
+finish delay  = 60
+finish jitter = 5
+finish prob   = 1.0
+
+skymap delay  = 60
+skymap jitter = 10
+skymap prob   = 1.0
+
+[lib]
+lvem = True
+
+start delay  = 10
+start jitter = 1
+start prob   = 1.0
+
+finish delay  = 60
+finish jitter = 5
+finish prob   = 1.0
+
+skymap delay  = 60
+skymap jitter = 10
+skymap prob   = 1.0
+
 [external triggers]
 delay  = 60
 jitter = 10
