--- a/etc/olib.ini
+++ b/etc/olib.ini
@@ -20,6 +20,27 @@ adv respond jitter = 5
 adv respond prob   = 0.9
 adv success prob   = 0.5
 
+[segDB2grcDB]
+start delay  = 10
+start jitter = 1
+start prob   = 1.0
+
+flags = H1:DMT-ANALYSIS_READY:1 L1:DMT-ANALYSIS_READY:1
+
+[H1:DMT-ANALYSIS_READY:1]
+delay  = 30
+jitter = 5
+prob   = 1.0
+
+win = 30
+
+[L1:DMT-ANALYSIS_READY:1]
+delay  = 30
+jitter = 5
+prob   = 1.0
+
+win = 30
+
 [plot skymaps]
 plotSkymap delay  = 10
 plotSkymap jitter = 1
