idq facsimile should be implemented, although not tested

--- a/etc/gstlal.ini
+++ b/etc/gstlal.ini
@@ -41,6 +41,53 @@ prob   = 1.0
 
 win = 30
 
+[idq]
+instruments = H L
+classifiers = ovl
+
+pad left  = 10
+pad right = 10
+
+maxFAP = 1.0
+minFAP = 1e-5
+
+start delay  = 1.0
+start jitter = 0.5
+start prob   = 1.0
+
+tables delay  = 5.0
+tables jitter = 1.0
+tables prob   = 1.0
+
+fap delay  = 5.0
+fap jitter = 1.0
+fap prob   = 1.0
+
+gwf delay  = 5.0
+gwf jitter = 1.0
+gwf prob   = 1.0
+
+timeseries delay  = 5.0
+timeseries jitter = 1.0
+timeseries prob   = 1.0
+
+activeChan delay  = 10.0
+activeChan jitter =  1.0
+activeChan prob   =  1.0
+
+calib delay  = 20.0
+calib jitter =  5.0
+calib prob   =  1.0
+
+roc delay  = 20.0
+roc jitter =  5.0
+roc prob   =  1.0
+
+stats delay  = 30.0
+stats jitter =  5.0
+stats prob   =  1.0
+
+
 [plot skymaps]
 plotSkymap delay  = 10
 plotSkymap jitter = 1
