--- a/etc/lvalert_listen.ini
+++ b/etc/lvalert_listen.ini
@@ -1,2 +1,2 @@
-[lvalertMP-TestNode]
-executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/confirmation.sh
+[lvalerttest-testnode]
+executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
