significant debugging of the actual simulation software and demonstration of full functionality, starting from simulate.py, through FakeDb, and into lvalertTest_listen. At this point, the library appears to be complete and working

--- a/etc/lvalert_listen.ini
+++ b/etc/lvalert_listen.ini
@@ -1,2 +1,20 @@
 [lvalerttest-testnode]
 executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
+
+[cbc_gstlal_lowmass]
+executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
+
+[test_gstlal_lowmass]
+executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
+
+[burst_lib_allsky]
+executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
+
+[test_lib_allsky]
+executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
+
+[burst_cwb_allsky]
+executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
+
+[test_cwb_allsky]
+executable = /home/reed/LIGO/lvalert-dev/test/lvalertTest/bin/confirmation.sh
