tweaked executables a bit and some error handling

--- a/etc/lvalert_listenMP.ini
+++ b/etc/lvalert_listenMP.ini
@@ -1,10 +1,10 @@
 [testProcess]
 nodes = lvalerttest-testnode
 
-childConfig = /home/reed/LIGO/lvalert-dev/test/lvalertTest/etc/childConfig.ini
+childConfig = /home/reed.essick/lvalert-dev/lvalertTest/etc/childConfig.ini
 
 verbose = True
-sleep = 0.1
+sleep = 0.5
 maxComplete = 10
 maxFrac = 0.5
 
